[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "device_sim"
readme = "README.md"
authors = [
    {name = "Marco Montevechi Filho", email = "montevechi1618@gmail.com"},
]
description = "Simple device simulator to test EPICS IOCs."
requires-python = ">=3.11"
keywords = ["EPICS", "hardware", "simulator"]
dynamic = ["version"]
dependencies = [
  "pyyaml",
  "schema",
]

[project.urls]
Homepage = "https://github.com/marcomontevechi1/device-simulator.git"
